# glsandbox

./: .gitignore  CMakeLists.txt  README.md  fragShader  fragShaderBlue  glad.c  main.cpp  reconfigure.sh  vertshader
glad/: CMakeLists.txt
glad/include/glad/: gl.h
include/glad/: glad.h
